Fix #5487: Increase contrast of upload progress bar on dark theme

--- a/app/javascript/src/styles/base/040_colors.scss
+++ b/app/javascript/src/styles/base/040_colors.scss
@@ -196,7 +196,7 @@ html, body[data-current-user-theme="light"] {
 
   --uploads-dropzone-background: var(--grey-1);
   --uploads-dropzone-progress-bar-foreground-color: var(--link-color);
-  --uploads-dropzone-progress-bar-background-color: var(--link-hover-color);
+  --uploads-dropzone-progress-bar-background-color: var(--grey-2);
 
   --forum-vote-up-color: var(--green-5);
   --forum-vote-meh-color: var(--orange-3);
@@ -435,8 +435,8 @@ html, body[data-current-user-theme="light"] {
   --modqueue-tag-warning-color: var(--red-7);
 
   --uploads-dropzone-background: var(--grey-7);
-  --uploads-dropzone-progress-bar-foreground-color: var(--link-color);
-  --uploads-dropzone-progress-bar-background-color: var(--link-hover-color);
+  --uploads-dropzone-progress-bar-foreground-color: var(--blue-5);
+  --uploads-dropzone-progress-bar-background-color: var(--grey-6);
 
   --forum-vote-up-color: var(--green-4);
   --forum-vote-meh-color: var(--yellow-2);
